new file:   __pycache__/app.cpython-310.pyc modified:   app.py modified:   template/home.html

--- a/template/home.html
+++ b/template/home.html
@@ -35,27 +35,28 @@
   <script>
     function validateForm() {
 
-    let username = document.getElementById("username").value;
-    let password = document.getElementById("password").value;
+      let username = document.getElementById("username").value;
+      let password = document.getElementById("password").value;
     
-    if (username == "" || password == "") {
-        alert("Both username and password fields must be filled out");
-        return false;
-    }
-    if (password.length < 8) {
-        alert("Password must be at least 8 characters long");
-        return false;
-    }
+      if (username == "" || password == "") {
+          alert("Both username and password fields must be filled out");
+          return false;
+      }
+      if (password.length < 8) {
+          alert("Password must be at least 8 characters long");
+          return false;
+      }
 
-    console.log(username);
-    console.log(password);
+      console.log(username);
+      console.log(password);
+      const userInfo = {username, password};
+      console.log(userInfo);
+      alert("Login");
+      const request = new XMLHttpRequest()
+      request.open('POST', `/ProcessUserInfo/${JSON.stringify(userInfo)}`)
+      request.send()
 
-    const request = new XMLHttpRequest();
-    request.open('POST', `/ProcessUserInfo/${JSON.stringify(username, password)}`);
-    request.send();
-    alert("Login");
-
-    return true;
+      return true;
     };
   </script>
 </html>
