--- a/template/home.html
+++ b/template/home.html
@@ -13,23 +13,172 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Student Management System</title>
+    <title>Concentración de Software</title>
   </head>
+  
   <body>
     <div class="container">
-      <h1>Welcome to the Student Management System</h1>
-      <p>This is the home page for the student management system.</p>
+      <h1>Registro de usuarios</h1>
+      <p>Página de inicio</p>
     </div>
-    <form action="" onsubmit="return validateForm()">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username">
-      <br><br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password">
-      <br><br>
-      <input type="submit" value="Submit" id="btn">
-   
-      <script src="script.js"></script>
 
-  </body>
+    <form action="" onsubmit="return validateForm()">
+      <div>    
+        <button id="showReg" type="button">Registrar</button>
+        <button id="hideReg" type="button">Login</button>
+        <br><br>
+      </div>
+
+      <div id="login-form" style="display:block">
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email">
+        <br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+        <br><br>
+        <input type="submit" value="Login" id="btn">
+      </div>
+
+      <div id="registration-form" style="display:none">
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email">
+        <br><br>
+        <label for="phone">Teléfono:</label>
+        <input type="text" id="phone" name="phone">
+        <br><br>
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password">
+        <br><br>
+        <label for="confirm_password">Confirmar contraseña:</label>
+        <input type="password" id="confirm_password" name="confirm_password">
+        <br><br>
+        <input type="submit" value="Registrar" id="registration-btn">
+      </div>
+
+    </form>
+    <script>
+      window.onload = function() {
+      let haveAccount = true;
+
+function showRegistration() {
+    
+    haveAccount = false;
+  
+    var loginForm = document.getElementById("login-form");
+    var regForm = document.getElementById("registration-form");
+
+    if(loginForm){
+      document.getElementById("login-form").style.display = "none";
+      document.getElementById("btn").style.display = "none";
+    }else{
+        console.log("not found");
+    }
+    
+    if(regForm){
+      document.getElementById("registration-form").style.display = "block";
+      document.getElementById("registration-btn").style.display = "block";
+    }else{
+      console.log("not found");
+    }
+  }
+  
+  function hideRegistration() {
+    
+    haveAccount = true;
+
+    console.log("hide Registration");
+
+    var loginForm = document.getElementById("login-form");
+    var regForm = document.getElementById("registration-form");
+
+    if(regForm){
+      document.getElementById("registration-form").style.display = "none";
+      document.getElementById("registration-btn").style.display = "none";
+    }else{
+      console.log("not found");
+    }
+
+    if(loginForm){
+      document.getElementById("login-form").style.display = "block";
+      document.getElementById("btn").style.display = "block";
+    }else{
+        console.log("not found");
+    }
+    
+  }
+
+  document.getElementById("showReg").addEventListener("click", showRegistration);
+  document.getElementById("hideReg").addEventListener("click", hideRegistration);
+
+  function validateForm() {
+    if (document.getElementById("registration-form").style.display === "block") {
+      let name = document.getElementById("name").value.trim();
+      let email = document.getElementById("email").value.trim();
+      let phone = document.getElementById("phone").value.trim();
+      let password = document.getElementById("password").value.trim();
+      let confirmPassword = document.getElementById("confirm_password").value.trim();
+  
+      if (!haveAccount && (name === "" || email === "" || phone === "" || password === "" || confirmPassword === "")) {
+        alert("Por favor no deje campos vacíos.");
+        return false;
+      } else if (password !== confirmPassword) {
+        alert("Las contraseñas son diferentes.");
+          return false;
+        }
+        if(password.length < 7){
+        alert("La contraseña debe tener 8 caracteres.");
+        return false;
+      }
+      } else if (haveAccount) {
+        let _email = document.getElementById("email").value.trim();
+        let _password = document.getElementById("password").value.trim();
+    
+        if (_email === "" || _password === "") {
+          alert("Por favor no deje campos vacíos.");
+          return false;
+        }
+      }
+  
+    return true;
+  }
+  
+  function register_user_r() {
+    var xhr = new XMLHttpRequest();
+    var url = "http://127.0.0.1:5000/register_user_route";
+    xhr.open("POST", url, true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.onreadystatechange = function () {
+      if (xhr.readyState === 4 && xhr.status === 200) {
+        var response = JSON.parse(xhr.responseText);
+        alert(response.message);
+      }
+    };
+
+    xhr.onreadystatechange = function () {
+    if (xhr.readyState === 4) {
+      if (xhr.status === 200) {
+        alert(xhr.responseText);
+      } else {
+        alert("There was a problem with the request.");
+      }
+    }
+  };
+
+    var data = JSON.stringify({
+      email: document.getElementById("email").value,
+      phone: document.getElementById("phone").value,
+      password: document.getElementById("password").value,
+    });
+    xhr.send(data);    
+    console.log(data);
+  }
+
+      document.getElementById("registration-btn").addEventListener("click", function(event) {
+      event.preventDefault();
+      register_user_r();
+      });
+    }
+    </script>
+  </body>  
+  
 </html>
