--- a/template/student.html
+++ b/template/student.html
@@ -1,34 +1,9 @@
 <html>
   <head>
-    <style>
-      input[type="text"] {
-        display: block;
-        margin: 50px auto;
-        text-align: center;
-        width: 300px;
-        padding: 10px;
-        font-size: 18px;
-      }
-      h1 {
-        text-align: center;
-        font-size: 36px;
-      }
-      .info-box {
-        width: 300px;
-        margin: 20px auto;
-        padding: 20px;
-        border: 1px solid black;
-        text-align: center;
-      }
-      .info-box h2 {
-        font-size: 24px;
-        margin-bottom: 10px;
-      }
-    </style>
   </head>
   <body>
     <h1>Introduzca la matricula del estudiante que quiere buscar</h1>
-    <input type="text" />
+    <input type="text" name="matricula" />
     <div class="info-box">
       <h2>Información del estudiante</h2>
       <p>Nombre:</p>
