--- a/template/home.html
+++ b/template/home.html
@@ -22,13 +22,33 @@
         <p>This is the home page for the student management system.</p>
     </div>
     <form>
+        <h2>User Login</h2>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username">
         <br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password">
         <br><br>
-        <input type="submit" value="Submit" onclick="validateForm()">
+        <input type="submit" value="SubmitLogin" onclick="validateForm()">
+    </form>
+    <form>
+        <h2>User Register</h2>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email">
+        <br><br>
+        <label for="phone">Phone:</label>
+        <input type="text" id="phone" name="phone">
+        <br><br>
+        <label for="usernameR">Username:</label>
+        <input type="text" id="usernameR" name="usernameR">
+        <br><br>
+        <label for="passwordR">Password:</label>
+        <input type="password" id="passwordR" name="passwordR">
+        <br><br>
+        <label for="confirm_password">Confirm Password:</label>
+        <input type="password" id="confirm_password" name="confirm_password">
+        <br><br>
+        <input type="submit" value="SubmitSign" onclick="signForm()">
     </form>
 
   </body>
@@ -42,13 +62,7 @@
           alert("Both username and password fields must be filled out");
           return false;
       }
-      if (password.length < 8) {
-          alert("Password must be at least 8 characters long");
-          return false;
-      }
 
-      console.log(username);
-      console.log(password);
       const userInfo = {username, password};
       console.log(userInfo);
       alert("Login");
@@ -57,6 +71,35 @@
       request.send()
 
       return true;
+    };
+
+    function signForm() {
+
+      let email = document.getElementById("email").value;
+      let phone = document.getElementById("phone").value;
+      let usernameR = document.getElementById("usernameR").value;
+      let passwordR = document.getElementById("passwordR").value;
+      let confirmPassword = document.getElementById("confirm_password").value;
+      if (passwordR == confirmPassword) {
+        if (passwordR.length < 8) {
+          alert("Password must be at least 8 characters long");
+          return false;
+        };
+      }
+      else if (passwordR =! confirmPassword) {
+        alert("Password must be the same");
+        return false;
+      };
+
+      const signInfo = {email, phone, usernameR, passwordR};
+      console.log(signInfo);
+      alert("Sign In");
+      const request = new XMLHttpRequest()
+      request.open('POST', `/RegisterUserInfo/${JSON.stringify(signInfo)}`)
+      request.send()
+
+      return true;
+
     };
   </script>
 </html>
