--- a/template/home.html
+++ b/template/home.html
@@ -21,35 +21,37 @@
         <h1>Welcome to the Student Management System</h1>
         <p>This is the home page for the student management system.</p>
     </div>
-    <form>
-        <h2>User Login</h2>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username">
-        <br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password">
-        <br><br>
-        <input type="submit" value="SubmitLogin" onclick="validateForm()">
-    </form>
-    <form>
-        <h2>User Register</h2>
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email">
-        <br><br>
-        <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone">
-        <br><br>
-        <label for="usernameR">Username:</label>
-        <input type="text" id="usernameR" name="usernameR">
-        <br><br>
-        <label for="passwordR">Password:</label>
-        <input type="password" id="passwordR" name="passwordR">
-        <br><br>
-        <label for="confirm_password">Confirm Password:</label>
-        <input type="password" id="confirm_password" name="confirm_password">
-        <br><br>
-        <input type="submit" value="SubmitSign" onclick="signForm()">
-    </form>
+    <div>
+        <form>
+            <h2>User Login</h2>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username">
+            <br><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password">
+            <br><br>
+            <input type="submit" value="SubmitLogin" onclick="validateForm()">
+        </form>
+        <form>
+            <h2>User Register</h2>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email">
+            <br><br>
+            <label for="phone">Phone:</label>
+            <input type="text" id="phone" name="phone">
+            <br><br>
+            <label for="usernameR">Username:</label>
+            <input type="text" id="usernameR" name="usernameR">
+            <br><br>
+            <label for="passwordR">Password:</label>
+            <input type="password" id="passwordR" name="passwordR">
+            <br><br>
+            <label for="confirm_password">Confirm Password:</label>
+            <input type="password" id="confirm_password" name="confirm_password">
+            <br><br>
+            <input type="submit" value="SubmitSign" onclick="signForm()">
+        </form>
+    </div>
 
   </body>
   <script>
