--- a/template/home.html
+++ b/template/home.html
@@ -2,6 +2,14 @@
 <html>
   <head>
     <style>
+      .forms {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        
+      
+      }
       form {
         display: flex;
         flex-direction: column;
@@ -21,7 +29,7 @@
         <h1>Welcome to the Student Management System</h1>
         <p>This is the home page for the student management system.</p>
     </div>
-    <div>
+    <div class="forms">
         <form>
             <h2>User Login</h2>
             <label for="username">Username:</label>
