--- a/template/home.html
+++ b/template/home.html
@@ -3,6 +3,12 @@
   <head>
     
     <style>
+      .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+      }
       form {
         display: flex;
         flex-direction: column;
